# cellularNNRealtime

./: .gitignore  cnn_v1.py  ode_integrationv2.jl  pkl_save.py  pyproject.toml  server.py  use_rtc.py
frontend/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
frontend/src/: index.jsx
frontend/src/assets/: licenses.js
frontend/src/components/: UploadButton.jsx
frontend/src/pages/: Home.jsx  Home.module.css  Licenses.jsx  MobileCNN.jsx  PhotoCNN.jsx  PhotoCNN.module.css  STX.jsx  VideoCNN.jsx  VideoCNN.module.css
